# cerberus

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  pyrightconfig.json  sitemap.xml
complexity/: index.html
components/: index.html
configuration/: index.html
contributing/: index.html
developing/: index.html
docs/: README.md  complexity.md  components.md  configuration.md  contributing.md  developing.md  llms-full.txt  llms.txt  model_comparison_k5_vs_k9.md  models.md  multi_gpu.md  overview.md  prediction.md  preprocessing.md  samplers.md  structure.md  usage.md  variants.md  workflow.md
examples/: atac_k562_biasnet.sh  atac_k562_biasnet_finetune.sh  atac_k562_dalmatian.sh  chip_ar_mdapca2b.py  chip_ar_mdapca2b_asap.sh  chip_ar_mdapca2b_bpnet.py  chip_ar_mdapca2b_bpnet.sh  chip_ar_mdapca2b_geminet.py  chip_ar_mdapca2b_gopher.py  chip_ar_mdapca2b_gopher.sh  chip_ar_mdapca2b_lyranet.py  chip_ar_mdapca2b_pomeranian.py  chip_ar_mdapca2b_pomeranian.sh  chip_foxa1_22rv1_bpnet.sh  chip_foxa1_22rv1_bpnet_all_residual_architectures.sh  chip_foxa1_22rv1_exo_wt_i176m_bpnet_pomeranian.sh  chip_foxa1_22rv1_pomeranian.sh  chip_foxa1_22rv1_shared_unique_predict_plot.sh  chip_foxa1_hepg2_encode_bpnet_pomeranian.sh  chip_foxa1_hepg2_encode_plot_predict.sh  chip_foxa1_k562_encode_bpnet_pomeranian.sh  chip_foxa1_k562_encode_plot_predict.sh  chip_prox1_tc32_asap.sh  chip_prox1_tc32_bpnet.sh  chip_prox1_tc32_bpnet_pomeranian.sh  chip_prox1_tc32_gopher.sh  chip_prox1_tc32_plot_predict.sh  chip_prox1_tc32_pomeranian.py  chip_prox1_tc32_pomeranian.sh  foxa1_lncap_22rv1_multitask_differential.sh  plot_training_results.py  scatac_kidney_biasnet.sh  scatac_kidney_chrombpnet.sh  scatac_kidney_chrombpnet_bias.sh  scatac_kidney_dalmatian.sh  scatac_kidney_dalmatian_multitask.sh  scatac_kidney_multitask_targets.json  scatac_kidney_pseudobulk.sh
misc/: benchmark_complexity.py  benchmark_pseudobulk.py  count_asap_params.py  debug_dust.py  debug_loss_comparison.py  debug_loss_gradients.py  debug_mock_training.py  debug_scalar_numpy.py  issue_with_rmsnorn_mixed_weights.py  lyra-code-gemini.py  plot_transforms.py  results_dataloader.txt  verify_complexity_matching.py
model_comparison_k5_vs_k9/: index.html
models/: index.html
multi_gpu/: index.html
notebooks/: baseline_cnn_train.py  bpnet_train.py  cerberus_basics.py  cerberus_datamodule_setup.py  chip_ar_mdapca2b_attribution_ism_vs_taylor.py  chip_ar_mdapca2b_compare_models.py  chip_ar_mdapca2b_predict.py  chip_ar_mdapca2b_predict_bpnet.py  chip_ar_mdapca2b_score_variants.py  inference_demo.py  mock_training.py  model_ensemble_demo.py  paths.py  prediction_demo.py  run_all.sh  simple_cnn_train.py
overview/: index.html
prediction/: index.html
preprocessing/: index.html
samplers/: index.html
search/: search_index.json
structure/: index.html
tests/: conftest.py  mock_utils.py  test_adaptive_loss_weight.py  test_api_semantics.py  test_asap_equivalence.py  test_attribution.py  test_audit_regressions.py  test_base_sampler.py  test_batch_timing.py  test_bed_partition_folds.py  test_bgzip_and_tabix.py  test_biasnet.py  test_binning.py  test_bpaitac_poisson_loss.py  test_bpnet_architecture_example_script.py  test_bpnet_gradient_training.py  test_bpnet_implementation.py  test_bpnet_loss_comparison.py  test_chrombpnet.py  test_chrombpnet_multitask.py  test_chrombpnet_reporting.py  test_cnn_model.py  test_complexity.py  test_complexity_cache.py  test_complexity_coverage.py  test_complexity_hist.py  test_complexity_matched_cache_split.py  test_complexity_matched_exclusion.py  test_complexity_matched_resample.py  test_complexity_matched_sampler.py  test_complexity_metrics.py  test_complexity_padding.py  test_complexity_pool.py  test_config_coverage.py  test_config_target_scale.py  test_config_validation.py  test_core.py  test_count_profile_metrics.py  test_cre_loading.py  (+178 more)
(+212 files in other folders)
