[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus"
version = "0.1.0"
description = "Attentive multi-headed and highly trained companion to sequence-to-function deep-learning models"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Marcin Cieslik", email = "mcieslik@med.umich.edu"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
  "pyfaidx",
  "pybigtools",
  "interlap",
  "pytorch-lightning",
  "timm",
]

[project.optional-dependencies]
dev = ["pytest", "pybigwig", "pysam", "matplotlib"]

[project.urls]
"Homepage" = "https://github.com/marcincieslik/cerberus"

[tool.setuptools.packages.find]
where = ["src"]
