[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus"
version = "1.0.0a1"
description = "Attentive multi-headed and highly trained companion to sequence-to-function deep-learning models"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  {name = "Marcin Cieslik", email = "mcieslik@med.umich.edu"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
  "torch",
  "pyfaidx",
  "pybigtools",
  "interlap",
  "pytorch-lightning",
  "timm",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pybigwig", "pysam", "matplotlib", "jupyter", "ipywidgets", "snapatac2", "ruff", "pre-commit"]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
]

[project.urls]
"Homepage" = "https://github.com/marcincieslik/cerberus"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["F", "I", "UP", "B"]
ignore = ["B017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
norecursedirs = ["tests/benchmark"]
filterwarnings = [
    # PyTorch 2.11: torch/utils/mkldnn.py uses 14 deprecated @torch.jit.script_method
    # decorators; imported internally by torch.compile(). Remove when fixed upstream.
    "ignore:`torch.jit.script_method` is deprecated:DeprecationWarning",
    # PyTorch Lightning 2.6.1 + PyTorch 2.11: pytorch_lightning/utilities/_pytree.py
    # uses deprecated LeafSpec isinstance check. Remove when PL updates pytree API.
    "ignore:`isinstance\\(treespec, LeafSpec\\)` is deprecated:FutureWarning",
]
